create table cidade
(
    id   int         NOT NULL,
    nome varchar(50) NOT NULL,
    uf   char(2)     NOT NULL,
    constraint pk_cidade primary key (id)
);