create table produto
(
    id   int          NOT NULL,
    nome varchar(100) NOT NULL,
    constraint pk_produto primary key (id)
);
