create table estoque
(
    id         int           NOT NULL,
    quantidade decimal(6, 4) NOT NULL,
    constraint pk_estoque primary key (id)
);